# EREX

./: .env.example  .gitignore  AGENTS.md  LICENSE.md  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  pst_extractor.py
backend/app/models/: __init__.py
backend/app/routes/: __init__.py  index_rules.py  pipeline.py
backend/app/services/: __init__.py  aggregator.py  classifier.py  cleaner.py  email_parser.py  extractor.py  index_rules.py  pipeline.py  pipeline_config.py  semantic.py  splitter.py
backend/app/services/preprocess/: __init__.py  line_filter.py
backend/app/utils/: config.py  logging.py  openai_client.py
backend/config/: index_rules.json  keywords_tech.json  line_filter.json  semantic_job_templates.json
backend/config/classifiers/: foreigner.json
backend/tests/: conftest.py  export_classifier_foreigner.py  export_keyword_summary.py  export_split_to_csv.py  export_to_csv.py  test_classifier.py  test_cleaner.py  test_email_parser.py  test_extractor.py  test_index_rules.py  test_line_filter.py  test_semantic.py  test_splitter.py
docs/: HOWTO.md  prompt.md
docs/api/: README.md
docs/architecture/: architecture-design.md  data-flow.md  module-design.md  system-overview.md  tech-stack.md
docs/backend/: README.md  line-filter.md  pipeline.md  semantic.md
docs/db/: README.md
docs/frontend/: README.md
frontend/: App.tsx  Dockerfile  README.md  index.html  metadata.json  nginx.conf  package-lock.json  package.json  types.ts
infra/: docker-compose.dev.yml  docker-compose.yml
(+12 files in other folders)
