[project]
name = "myapp"
version = "0.1.0"
description = "A sample FastAPI project managed by uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "extract-msg>=0.55.0",
    "olefile>=0.47",
    "compressed-rtf>=1.0.7",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "ruff"
]
