[project]
name = "erex-backend"
version = "0.1.0"
description = "FastAPI backend for the EREX configurable email extraction service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.6",
    "extract-msg>=0.55.0",
    "olefile>=0.47",
    "compressed-rtf>=1.0.7",
    "asyncpg>=0.30.0",
    "sentence-transformers>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
]
